@@ -86,11 +86,11 @@ ColourConversionEditor::ColourConversionEditor (wxWindow* parent)
 	table->Add (output_sizer, wxGBPosition (r, 1));
 	++r;
 
-	_input_gamma->SetRange(0.1, 4.0);
-	_input_gamma->SetDigits (1);
+	_input_gamma->SetRange (0.1, 4.0);
+	_input_gamma->SetDigits (2);
 	_input_gamma->SetIncrement (0.1);
-	_output_gamma->SetRange(0.1, 4.0);
-	_output_gamma->SetDigits (1);
+	_output_gamma->SetRange (0.1, 4.0);
+	_output_gamma->SetDigits (2);
 	_output_gamma->SetIncrement (0.1);
 
 	_input_gamma->Bind (wxEVT_COMMAND_SPINCTRLDOUBLE_UPDATED, boost::bind (&ColourConversionEditor::changed, this));
